[package]
name = "mpl-bubblegum"
version = "0.10.0"
description = "NFT Compression"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-bubblegum"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = ["dep:spl-associated-token-account"]
default = ["dep:spl-associated-token-account"]

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
bytemuck = "1.13.0"
mpl-token-metadata = { version = "1.11.0", features = ["no-entrypoint"] }
num-traits = "0.2.15"
solana-program = "~1.14.17"
spl-account-compression = {git="https://github.com/madergaser/solana-program-library-spl-account-compression-anchor27.git", rev="cd8c4bd5f03c550b953b95b4d452a4c445d3c2d1", features=["cpi"]}
toml_datetime = "=0.6.1"
winnow = "=0.4.1"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"], optional = true }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }

[dev-dependencies]
async-trait = "0.1.71"
mpl-token-auth-rules = { version = "1.4.3", features = ["no-entrypoint"] }
solana-program-test = "~1.14.17"
solana-sdk = "~1.14.17"
spl-concurrent-merkle-tree = {git="https://github.com/madergaser/solana-program-library-spl-account-compression-anchor27.git", rev="cd8c4bd5f03c550b953b95b4d452a4c445d3c2d1"}
spl-merkle-tree-reference = "0.1.0"
spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }

